#146202 - Up/Down buttons update functionality added